--- a/MapMaven/wwwroot/css/app.css
+++ b/MapMaven/wwwroot/css/app.css
@@ -1,4 +1,13 @@
-﻿.full-height {
+﻿body {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.full-height {
     height: 100%;
 }
 
@@ -59,15 +68,6 @@
 
 .leaderboard-tabs .mud-tab-slider {
     background-color: var(--mud-palette-action-default);
-}
-
-.map-browser {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
 }
 
 .row-selected {
