Map details popup text selectable

--- a/MapMaven/Components/Maps/MapDetail.razor
+++ b/MapMaven/Components/Maps/MapDetail.razor
@@ -2,7 +2,7 @@
 @using MapMaven.Core.Utilities;
 @using MapMaven.Core.Utilities.Scoresaber
 
-<MudDialog>
+<MudDialog Class="text-selectable">
     <DialogContent>
         <MapCover Map="Map" Class="blurred-background-image" Style="height: 150px; top: -50px" />
         <MudGrid>
