--- a/MapMaven/Components/Maps/MapBrowser.razor
+++ b/MapMaven/Components/Maps/MapBrowser.razor
@@ -3,7 +3,7 @@
 @using MapMaven.Core.Utilities.Scoresaber
 @using MapMaven.Core.Models.DynamicPlaylists
 
-<div @onkeydown="OnKeyDown" class="d-inline full-width" tabindex="-1">
+<div @ref="TableWrapperRef" @onkeydown="OnKeyDown" class="d-inline full-width" tabindex="-1">
     <MudDataGrid @ref="TableRef"
                  T="Map"
                  Items="Maps"
