--- a/MapMaven/_Imports.razor
+++ b/MapMaven/_Imports.razor
@@ -5,6 +5,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using MudBlazor
+@using MudExtensions
 @using MapMaven
 @using MapMaven.Components
 @using MapMaven.Components.Shared
