Changed difficulty slider mouseup event to pointerup event to make it work in VR

--- a/MapMaven/Components/Maps/DifficultyModifierSlider.razor
+++ b/MapMaven/Components/Maps/DifficultyModifierSlider.razor
@@ -5,7 +5,7 @@
 
 <MudSlider T="int"
            @bind-Value="DifficultyModifier"
-           @onmouseup="OnDifficultyAmplifierChanged"
+           @onpointerup="OnDifficultyAmplifierChanged"
            Min="-100"
            Max="100"
            Step="1"
