Not showing improvment map pool preset playlists when no leaderboard is configured

--- a/MapMaven/Components/Playlists/EditDynamicPlaylistDialog.razor
+++ b/MapMaven/Components/Playlists/EditDynamicPlaylistDialog.razor
@@ -9,7 +9,7 @@
     <MudDialog>
         <DialogContent>
             <div id="preset-dynamic-playlists">
-                @foreach (var playlist in PresetDynamicPlaylists.Playlists)
+                @foreach (var playlist in PresetDynamicPlaylists.Playlists.Where(p => p.DynamicPlaylistConfiguration.MapPool == MapPool.Standard || LeaderboardAvailable))
                 {
                     <MudButton OnClick="() => ConfigureDynamicPlaylist(playlist)" Variant="Variant.Filled" Class="pa-0 mx-2" Style="background-color: var(--mud-palette-drawer-background);">
                         <div class="d-flex flex-column align-center justify-center dynamic-playlist-add">
