--- a/MapMaven/wwwroot/css/app.css
+++ b/MapMaven/wwwroot/css/app.css
@@ -173,3 +173,7 @@ a:hover {
     .mud-chip-text:hover:not(.mud-disabled), .mud-chip-text:focus-visible:not(.mud-disabled) {
         background-color: rgba(255, 255, 255, 0.1);
     }
+
+.no-title .mud-dialog-title {
+    display: none;
+}
