--- a/MapMaven/Components/Maps/MapBrowser.razor
+++ b/MapMaven/Components/Maps/MapBrowser.razor
@@ -7,8 +7,7 @@
     <MudDataGrid @ref="TableRef"
                  T="Map"
                  Items="Maps"
-                 Height="@Height"
-                 Class="map-browser full-height full-width background-transparent"
+                 Class="map-browser full-height full-width background-transparent d-flex flex-column"
                  Loading="LoadingMapInfo"
                  QuickFilter="Filter"
                  FixedHeader="true"
@@ -35,14 +34,6 @@
                             @SelectedPlaylist.Title
                         </MudChip>
                     }
-                    @if (MapSort is not null)
-                    {
-                        <MudChip OnClose="() => RemoveMapSort()">@MapSort?.Name</MudChip>
-                    }
-                    @foreach (var mapFilter in MapFilters.Where(f => f.Visible))
-                    {
-                        <MudChip OnClose="() => RemoveMapFilter(mapFilter)">@mapFilter.Name</MudChip>
-                    }
                     <MudTextField @bind-Value="SearchString"
                                   DebounceInterval="300"
                                   Immediate="true"
@@ -62,6 +53,16 @@
                         <MudTooltip Text="Bulk&nbsp;edit">
                             <MudIconButton Icon="@(Selectable ? Icons.Material.Filled.LibraryAddCheck : Icons.Material.Outlined.LibraryAddCheck)" Class="mx-2" OnClick="ToggleSelectable" />
                         </MudTooltip>
+                    }
+                </MudItem>
+                <MudItem xs="12" Class="py-0">
+                    @if (MapSort is not null)
+                    {
+                        <MudChip OnClose="() => RemoveMapSort()" Class="mb-3">@MapSort?.Name</MudChip>
+                    }
+                    @foreach (var mapFilter in MapFilters.Where(f => f.Visible))
+                    {
+                        <MudChip OnClose="() => RemoveMapFilter(mapFilter)" Class="mb-3">@mapFilter.Name</MudChip>
                     }
                 </MudItem>
             </MudGrid>
