--- a/MapMaven/wwwroot/css/app.css
+++ b/MapMaven/wwwroot/css/app.css
@@ -77,6 +77,10 @@
     background-color: rgba(255, 255, 255, 0.2);
 }
 
+.map-browser .mud-table-container {
+    flex: 1;
+}
+
 /* MudBlazor overrides */
 .mud-main-content {
     height: 100vh;
