Disabled sorting by clicking on columns when advanced search sort has been selected

--- a/MapMaven/Components/Maps/MapBrowser.razor
+++ b/MapMaven/Components/Maps/MapBrowser.razor
@@ -12,7 +12,7 @@
                  QuickFilter="Filter"
                  FixedHeader="true"
                  MultiSelection="true"
-                 SortMode="SortMode.Single"
+                 SortMode="MapSort is null ? SortMode.Single : SortMode.None"
                  SelectedItems="SelectedMaps"
                  SelectOnRowClick="false"
                  SelectedItemsChanged="OnSelectedItemsChanged"
