--- a/MapMaven/Components/Maps/RankedMapBrowserRow.razor
+++ b/MapMaven/Components/Maps/RankedMapBrowserRow.razor
@@ -24,7 +24,7 @@
             var difficulty = context.Item.Difficulty?.Difficulty;
             var chipStyle = $"border: 1px solid {DifficultyDisplayUtils.GetColor(difficulty)}";
         }
-        <MudChip Size="Size.Small" Variant="Variant.Outlined" Style="@chipStyle">@difficulty</MudChip>
+        <MudChip Size="Size.Small" Variant="Variant.Outlined" Style="@chipStyle">@DifficultyDisplayUtils.GetDisplayName(difficulty)</MudChip>
     </CellTemplate>
 </TemplateColumn>
 <TemplateColumn T="Map" Sortable="false">
