Added clear filters tag + added cancel button to advanced search popup

--- a/MapMaven/Components/Maps/AdvancedSearch.razor
+++ b/MapMaven/Components/Maps/AdvancedSearch.razor
@@ -45,6 +45,9 @@
         </DialogContent>
         <DialogActions>
             <div style="padding: 8px 16px;">
+                <MudButton OnClick="MudDialog.Cancel">
+                    Cancel
+                </MudButton>
                 <MudButton
                     Variant="Variant.Filled"
                     StartIcon="@Icons.Material.Filled.Search"
