--- a/MapMaven/Components/Settings.razor
+++ b/MapMaven/Components/Settings.razor
@@ -81,6 +81,12 @@
         }
     </DialogContent>
     <DialogActions>
+        @if (!InitialSetup)
+        {
+            <MudButton Color="Color.Error" Variant="Variant.Filled" Class="ma-3" OnClick="ResetApplication">
+                Reset Map Maven
+            </MudButton>
+        }
         <MudButton Color="Color.Primary" Variant="Variant.Filled" Class="ma-3" Disabled="string.IsNullOrEmpty(BeatSaberInstallLocation)" OnClick="SaveSettings">
             @(InitialSetup ? "Start" : "Save")
         </MudButton>
