--- a/MapMaven/wwwroot/css/app.css
+++ b/MapMaven/wwwroot/css/app.css
@@ -81,6 +81,10 @@
     flex: 1;
 }
 
+.card-header-highlight {
+    background-color: rgba(255, 255, 255, 0.05);
+}
+
 /* MudBlazor overrides */
 .mud-main-content {
     height: 100vh;
