Rank chart styling

--- a/MapMaven/Pages/Dashboard.razor
+++ b/MapMaven/Pages/Dashboard.razor
@@ -10,7 +10,10 @@
     <MudCard>
         <MudCardHeader Class="card-header-highlight">
             <CardHeaderContent>
-                <MudText Typo="Typo.h6">Global rank</MudText>
+                <div class="d-flex align-center">
+                    <MudIcon Icon="@Icons.Material.Filled.Language" Class="mr-2"></MudIcon>
+                    <MudText Typo="Typo.h6">Global rank</MudText>
+                </div>
             </CardHeaderContent>
         </MudCardHeader>
         <MudCardContent Class="py-0">
