Rank history working for BeatLeader

--- a/MapMaven/Pages/Dashboard.razor
+++ b/MapMaven/Pages/Dashboard.razor
@@ -19,7 +19,8 @@
         <MudCardContent Class="py-0">
             @if (RankHistory is not null && RankHistory.Any())
             {
-                <ApexChart TItem="RankHistoryRecord"
+                <ApexChart @ref="RankHistoryChart"
+                           TItem="RankHistoryRecord"
                            Options="RankHistoryChartOptions"
                            Height="300">
 
