--- a/MapMaven/Pages/Dashboard.razor
+++ b/MapMaven/Pages/Dashboard.razor
@@ -7,33 +7,67 @@
 @page "/dashboard"
 
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Style="padding-top: 24px; padding-bottom: 24px;">
-    <MudCard>
-        <MudCardHeader Class="card-header-highlight">
-            <CardHeaderContent>
-                <div class="d-flex align-center">
-                    <MudIcon Icon="@Icons.Material.Filled.Language" Class="mr-2"></MudIcon>
-                    <MudText Typo="Typo.h6">Global rank</MudText>
-                </div>
-            </CardHeaderContent>
-        </MudCardHeader>
-        <MudCardContent Class="py-0">
-            @if (RankHistory is not null && RankHistory.Any())
-            {
-                <ApexChart @ref="RankHistoryChart"
-                           TItem="RankHistoryRecord"
-                           Options="RankHistoryChartOptions"
-                           Height="300">
+    <MudGrid>
+        <MudItem xs="12">
+            <MudCard>
+                <MudCardHeader Class="card-header-highlight">
+                    <CardHeaderContent>
+                        <div class="d-flex align-center">
+                            <MudIcon Icon="@Icons.Material.Filled.Language" Class="mr-2"></MudIcon>
+                            <MudText Typo="Typo.h6">Global rank</MudText>
+                        </div>
+                    </CardHeaderContent>
+                </MudCardHeader>
+                <MudCardContent Class="py-0">
+                    @if (RankHistory is not null && RankHistory.Any())
+                    {
+                        <ApexChart @ref="RankHistoryChart"
+                                   TItem="RankHistoryRecord"
+                                   Options="RankHistoryChartOptions"
+                                   Height="300">
 
-                    <ApexPointSeries TItem="RankHistoryRecord"
-                                     Items="RankHistory"
-                                     Name="Rank"
-                                     SeriesType="SeriesType.Line"
-                                     XValue="x => x.Date"
-                                     YValue="x => x.Rank"
-                                     OrderBy="x => x.X"
-                                     Color="@MapMavenTheme.Theme.Palette.Primary.ColorLighten(0.2).ToString(MudColorOutputFormats.Hex)"/>
-                </ApexChart>
-            }
-        </MudCardContent>
-    </MudCard>
+                            <ApexPointSeries TItem="RankHistoryRecord"
+                                             Items="RankHistory"
+                                             Name="Rank"
+                                             SeriesType="SeriesType.Line"
+                                             XValue="x => x.Date"
+                                             YValue="x => x.Rank"
+                                             OrderBy="x => x.X"
+                                             Color="@MapMavenTheme.Theme.Palette.Primary.ColorLighten(0.2).ToString(MudColorOutputFormats.Hex)" />
+                        </ApexChart>
+                    }
+                </MudCardContent>
+            </MudCard>
+        </MudItem>
+        <MudItem xs="2">
+            <MudCard>
+                <MudCardHeader Class="card-header-highlight pa-3">
+                    <CardHeaderContent>
+                        <div class="d-flex align-center">
+                            <MudIcon Icon="@Icons.Material.Filled.Adjust" Size="MudBlazor.Size.Small" Class="mr-2"></MudIcon>
+                            <b>Average ranked accuracy</b>
+                        </div>
+                    </CardHeaderContent>
+                </MudCardHeader>
+                <MudCardContent Class="d-flex justify-center">
+                    <MudText Typo="Typo.h4">@AverageRankedAccuracy?.ToString("#0.##")</MudText>
+                </MudCardContent>
+            </MudCard>
+        </MudItem>
+        <MudItem xs="2">
+            <MudCard>
+                <MudCardHeader Class="card-header-highlight pa-3">
+                    <CardHeaderContent>
+                        <div class="d-flex align-center">
+                            <MudIcon Icon="@Icons.Material.Filled.Star" Size="MudBlazor.Size.Small" Class="mr-2"></MudIcon>
+                            <b>Average star difficulty</b>
+                        </div>
+                    </CardHeaderContent>
+                </MudCardHeader>
+                <MudCardContent Class="d-flex justify-center">
+                    <MudText Typo="Typo.h4">@AverageStarDifficulty?.ToString("#0.##")</MudText>
+                </MudCardContent>
+            </MudCard>
+        </MudItem>
+    </MudGrid>
 </MudContainer>
