--- a/MapMaven/Pages/Dashboard.razor
+++ b/MapMaven/Pages/Dashboard.razor
@@ -7,47 +7,74 @@
 @page "/dashboard"
 
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Style="padding-top: 24px; padding-bottom: 24px;">
-    <MudGrid>
-        <MudItem xs="12">
-            <MudCard>
-                <MudCardHeader Class="card-header-highlight">
-                    <CardHeaderContent>
-                        <div class="d-flex align-center">
-                            <MudIcon Icon="@Icons.Material.Filled.Language" Class="mr-2"></MudIcon>
-                            <MudText Typo="Typo.h6">Global rank</MudText>
-                        </div>
-                    </CardHeaderContent>
-                </MudCardHeader>
-                <MudCardContent Class="py-0">
-                    @if (RankHistory is not null && RankHistory.Any())
-                    {
-                        <ApexChart @ref="RankHistoryChart"
-                                   TItem="RankHistoryRecord"
-                                   Options="RankHistoryChartOptions"
-                                   Height="300">
+    @if (Player is not null)
+    {
+        <MudGrid Justify="Justify.FlexEnd">
+            <MudItem xs="2">
+                <MudCard>
+                    <MudCardHeader Class="d-flex justify-space-between card-header-highlight">
+                        <span>
+                            <MudIcon Icon="@Icons.Material.Filled.Language" Style="font-size: 1rem; transform: translateY(2px);"></MudIcon>
+                            @Player.Rank
+                        </span>
+                        <span>
+                            <span class="fi fi-@Player.CountryCode.ToLower() mr-1"></span>
+                            @Player.CountryRank
+                        </span>
+                        <span>
+                            <b>pp</b>
+                            @Player.Pp.ToString("#0.##")
+                        </span>
+                    </MudCardHeader>
+                    <MudCardContent>
+                        <h4>Best scored map tags:</h4>
+                        @foreach (var value in BestScoredMapTags.Select((tag, index) => (tag, number: index + 1)))
+                        {
+                            <MudChip Color="MudBlazor.Color.Primary" Size="MudBlazor.Size.Small">@value.number. @value.tag</MudChip>
+                        }
+                    </MudCardContent>
+                </MudCard>
+                <MudChip Icon="@Icons.Material.Filled.Adjust" Label="true" Class="full-width">
+                    <span>Average ranked accuracy | <b>@AverageRankedAccuracy?.ToString("#0.##")</b></span>
+                </MudChip>
+                <MudChip Icon="@Icons.Material.Filled.Star" Label="true" Class="full-width">
+                    <span>Average star difficulty | <b>@AverageStarDifficulty?.ToString("#0.##")</b></span>
+                </MudChip>
+            </MudItem>
+            <MudItem xs="10">
+                <MudCard>
+                    <MudCardHeader Class="card-header-highlight">
+                        <CardHeaderContent>
+                            <div class="d-flex align-center">
+                                <MudIcon Icon="@Icons.Material.Filled.Language" Class="mr-2"></MudIcon>
+                                <MudText Typo="Typo.h6">Global rank</MudText>
+                            </div>
+                        </CardHeaderContent>
+                    </MudCardHeader>
+                    <MudCardContent Class="py-0">
+                        @if (Player?.RankHistory is not null && Player.RankHistory.Any())
+                        {
+                            <ApexChart @ref="RankHistoryChart"
+                                       TItem="RankHistoryRecord"
+                                       Options="RankHistoryChartOptions"
+                                       Height="300">
 
-                            <ApexPointSeries TItem="RankHistoryRecord"
-                                             Items="RankHistory"
-                                             Name="Rank"
-                                             SeriesType="SeriesType.Line"
-                                             XValue="x => x.Date"
-                                             YValue="x => x.Rank"
-                                             OrderBy="x => x.X"
-                                             Color="@MapMavenTheme.Theme.Palette.Primary.ColorLighten(0.2).ToString(MudColorOutputFormats.Hex)" />
-                        </ApexChart>
-                    }
-                </MudCardContent>
-            </MudCard>
-        </MudItem>
-        <MudItem xs="2">
-            <MudChip Icon="@Icons.Material.Filled.Adjust" Label="true" Class="full-width">
-                <span>Average ranked accuracy | <b>@AverageRankedAccuracy?.ToString("#0.##")</b></span>
-            </MudChip>
-        </MudItem>
-        <MudItem xs="2">
-            <MudChip Icon="@Icons.Material.Filled.Star" Label="true" Class="full-width">
-                <span>Average star difficulty | <b>@AverageStarDifficulty?.ToString("#0.##")</b></span>
-            </MudChip>
-        </MudItem>
-    </MudGrid>
+                                <ApexPointSeries TItem="RankHistoryRecord"
+                                                 Items="Player.RankHistory"
+                                                 Name="Rank"
+                                                 SeriesType="SeriesType.Line"
+                                                 XValue="x => x.Date"
+                                                 YValue="x => x.Rank"
+                                                 OrderBy="x => x.X"
+                                                 Color="@MapMavenTheme.Theme.Palette.Primary.ColorLighten(0.2).ToString(MudColorOutputFormats.Hex)" />
+                            </ApexChart>
+                        }
+                    </MudCardContent>
+                </MudCard>
+            </MudItem>
+            <MudItem xs="4" Style="min-height: 400px">
+                <MapList Maps="PlayedRankedMaps"></MapList>
+            </MudItem>
+        </MudGrid>
+    }
 </MudContainer>
