--- a/MapMaven/Pages/Dashboard.razor
+++ b/MapMaven/Pages/Dashboard.razor
@@ -72,8 +72,8 @@
                     </MudCardContent>
                 </MudCard>
             </MudItem>
-            <MudItem xs="4" Style="min-height: 400px">
-                <MapList Maps="PlayedRankedMaps"></MapList>
+            <MudItem xs="4">
+                <MapList Maps="LatestHighPpGainMaps"></MapList>
             </MudItem>
         </MudGrid>
     }
